syntax = "proto3";

import "protodefine/mytype/types.proto";

package bs.client;


enum CMDID_Client{
	IDUnknow = 0;		//0保留
	
	IDLoginReq=1;		//登录请求
	IDLoginRsp=2;		//登录回复
	IDLogoutReq=3;		//注销登录请求
	IDLogoutRsp=4;		//注销登录回复

	IDQueryFundReq=10;	//查询财富请求
	IDQueryFundRsp=11;	//查询财富回复
	
	IDGetOnlineUserReq=80;	//获取onlie的用户列表请求
	IDGetOnlineUserRsp=81;	//获取onlie的用户列表回复
	IDKickUserReq=82;		//踢掉用户的请求
	IDKickUserRsp=83;		//踢掉用户的回复
	
	IDTestRouter = 90;		//测试router负载能力

	IDLast =100;
}


message LoginReq{

	enum LoginAction{
		ByAccount=0;      //账号
		GuestLogin=2;     //游客，即快速登录
		ByThirdID=4;      //第三方ID

		Robot=10;	//机器人
	};
	
	enum ClientOS{
		UNKWON = 0;
		PC = 0x1;	//这里指的是WIN7和XP
		IOS_AppStore = 0x2;	
		Android = 0x4;
		IOS_Breaked= 0x8;	//越狱版IOS
		WIN10 = 0x10;		//WIN10
	};

	types.BaseInfo base = 1; 
	uint32 game_kind=2;			//游戏种类
	LoginAction action_type=3;		//登录类型
	ClientOS client_os=4;	//客户端操作系统类型

	string login_account=7;	//用户账号
	string login_password=8;	//用户密码
	string client_version=9;	//客户端版本号
	string client_IP = 10;		//客户端IP
	string system_version=11;	//操作系统版本号
	
	uint32 logon_token=21;		//登录令牌

	//游客登录
	enum NetworkType{
		UNKWONType = 0;
		DIANXIN = 1;	//电信
		YIDONG = 2;		//移动
		LIANTONG = 3;	//联通
		WIFI = 4;		//WIFI
	}

	string mobile_code=22;	//
	string os_version=23;	//
	NetworkType sp_id=24;	//
};

message LoginRsp{
	enum Result{
		SUCCESS = 0;		//成功
		NOTEXIST = 1;		//账号不存在
		FROZEN = 2;			//账号被冻结
		FALSEPW = 3;		//密码错误
		NETERROR = 4;		//网络异常
		APPISBUSY = 5;		//服务器忙，人数爆满
		GUESTFORBID = 6;	//禁止游客登录
		CONNECTERROR = 7;	//连接异常
		VERSIONOLD = 8;		//版本过低，需要升级客户端
		FREQUENTLY = 10;	//所在IP登录次数过多

		SERVERERROR = 0xff;	//服务器其他异常错误
	}
	types.BaseInfo base = 1; 
	Result login_result=2;				//登录结果
	string login_info=3;				//登录失败后的提示信息
	types.BaseUserInfo user_base_info=4;		//登录成功后收到的用户基本信息
	types.UserSessionInfo user_sesion_info=5;	//用户的连接信息
	uint64  user_id = 6; 				//用户id
};

//就测试用的，字段随便乱写
message TestRouter
{
	enum Result{
		UNKWON = 0;
		SUCCESS = 1;	//
		NOTEXIST = 2;	//
		FROZEN = 3;		//
		FREQUENTLY = 4;	//
		APPISBUSY = 5;	//
		GUESTFORBID = 6;//
		APPINITING = 7;	//
		VERSIONOLD = 8;	//
		NOMOREGUEST = 9;	//
		SERVERERROR = 0xff;	//
	}
	types.BaseInfo base = 1; 
	Result login_result=2;						//
	string login_info=3;						//
	types.BaseUserInfo base_info=4;			//
	types.UserSessionInfo session_info=5;  //
	uint64  user_id = 6; //
	string tips = 7;	//
};


message LogoutReq{
	types.BaseInfo base = 1; 
	uint64 user_id = 2;
}

message LogoutRsp{
	///Normal登出回复或AnotherLogin登出通知
   enum LogoutReason{
      Normal=0;
      AnotherLogin=1;   //
   };
	types.BaseInfo base = 1; 
	LogoutReason logout_reason=2;
	string reason_info=3;
}


message QueryFundReq{
	types.BaseInfo base = 1; 
   uint32 fund_type=2;
   uint64 user_id = 3;
}

message QueryFundRsp{
	types.BaseInfo base = 1; 
	uint64 user_id = 2;	//用户id
  
	//
	uint32 change_reason=3;	//变化原因
	string change_info=4;	//变化说明
	repeated types.FundItem fund_items=5;
	
}

message GetOnlineUserReq{
	types.BaseInfo base = 1; 
	string check_string=2;	//
	uint64 user_id=3;
}


message GetOnlineUserRsp{
	types.BaseInfo base = 1; 
	//repeated OnlineUserInfo user_info_array=2;
	//repeated OnlineAPPInfo app_info_array=3;
	bool result=4;
}

message KickUserReq{
	types.BaseInfo base = 1; 
	string check_string=2;	//验证串
	repeated uint64 array_user_id=3;	//用户组
	uint64 op_user_id=4;	//操作用户
}

message KickUserRsp{
	types.BaseInfo base = 1; 
	bool is_ok=2;	//true成功false失败
}

